Replace markdown with HTML landing page and add CSS

--- a/index.html
+++ b/index.html
@@ -67,3 +67,26 @@ title: Right to Thrive
 <footer class="bg-peach text-center py-6">
   <p class="text-deep-brown">&copy; 2025 Right to Thrive. All rights reserved.</p>
 </footer>
+  GNU nano 2.0.6              File: index.html                                    
+
+        <label class="block text-deep-brown">Email:</label>
+        <input type="email" name="email" class="w-full border rounded p-2" requir$
+      </div>
+      <div>
+        <label class="block text-deep-brown">Message:</label>
+        <textarea name="message" rows="4" class="w-full border rounded p-2" requi$
+      </div>
+      <button type="submit" class="bg-coral text-white px-4 py-2 rounded">Send</b$
+    </form>
+  </section>
+</main>
+
+<footer class="bg-peach text-center py-6">
+  <p class="text-deep-brown">&copy; 2025 Right to Thrive. All rights reserved.</p>
+</footer>
+
+
+
+
+
+
