--- a/index.html
+++ b/index.html
@@ -1,92 +1,80 @@
----
-layout: default
-title: Right to Thrive
----
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Right2Thrive Global</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
-<section class="text-center px-4 py-10">
-  <img src="/assets/logo.png" alt="Right to Thrive Logo" class="mx-auto w-32 mb-4">
-  <h1 class="text-4xl font-bold text-coral">Right to Thrive</h1>
-  <p class="mt-2 text-lg text-deep-brown">Our mission is to build a more informed and just society by making legal knowledge understandable, engaging, and available to all.</p>
-</section>
+<header>
+  <h1>Right2Thrive Global</h1>
+</header>
 
-<nav class="bg-peach py-4">
-  <ul class="flex justify-center space-x-6 text-deep-brown">
-    <li><a href="#about" class="hover:underline">About Us</a></li>
-    <li><a href="#programs" class="hover:underline">Programs</a></li>
-    <li><a href="#resources" class="hover:underline">Resources</a></li>
-    <li><a href="#involved" class="hover:underline">Get Involved</a></li>
-    <li><a href="#contact" class="hover:underline">Contact</a></li>
-  </ul>
-</nav>
+<main>
 
-<main class="px-6 py-10 space-y-10">
-  <section id="about">
-    <h2 class="text-2xl font-semibold text-coral">About Us</h2>
-    <p class="text-deep-brown">Right to Thrive is a non-profit organization dedicated to the wellness of immigrants, especially youth. We aim to equip them with vital legal knowledge and mental health support.</p>
-  </section>
+  <!-- Tabs navigation -->
+  <div class="tabs">
+    <button class="tablink active" onclick="openTab(event, 'About')">About</button>
+    <button class="tablink" onclick="openTab(event, 'Projects')">Projects</button>
+    <button class="tablink" onclick="openTab(event, 'GetInvolved')">Get Involved</button>
+  </div>
 
-  <section id="programs">
-    <h2 class="text-2xl font-semibold text-coral">Our Programs</h2>
-    <ul class="list-disc list-inside text-deep-brown">
-      <li>Legal Education Workshops</li>
-      <li>Mental Health Support Groups</li>
-      <li>Youth Empowerment Mentorship</li>
+  <!-- Tabs content -->
+
+  <div id="About" class="tabcontent" style="display:block;">
+    <h2>About Us</h2>
+    <p>
+      Right2Thrive Global is dedicated to supporting underserved communities through education,
+      empowerment, and sustainable development projects.
+    </p>
+  </div>
+
+  <div id="Projects" class="tabcontent" style="display:none;">
+    <h2>Our Projects</h2>
+    <ul>
+      <li>Community education programs</li>
+      <li>Health and nutrition initiatives</li>
+      <li>Women &amp; youth empowerment workshops</li>
     </ul>
-  </section>
+  </div>
 
-  <section id="resources">
-    <h2 class="text-2xl font-semibold text-coral">Resources</h2>
-    <p class="text-deep-brown">Explore our guides, videos, and toolkits designed to inform and empower immigrant youth and their families.</p>
-  </section>
+  <div id="GetInvolved" class="tabcontent" style="display:none;">
+    <h2>Get Involved</h2>
 
-  <section id="involved">
-    <h2 class="text-2xl font-semibold text-coral">Get Involved</h2>
-    <p class="text-deep-brown">Join our cause as a volunteer, donor, or partner. Together, we can make a lasting impact.</p>
-  </section>
-
-  <section id="contact">
-    <h2 class="text-2xl font-semibold text-coral">Contact Us</h2>
-    <form class="space-y-4">
+    <form action="mailto:contact@right2thrive-global.org" method="post" enctype="text/plain" class="contact-form">
       <div>
-        <label class="block text-deep-brown">Name:</label>
-        <input type="text" name="name" class="w-full border rounded p-2" required>
+        <label class="block text-deep-brown" for="email">Email:</label>
+        <input type="email" id="email" name="email" class="w-full border rounded p-2" required />
       </div>
       <div>
-        <label class="block text-deep-brown">Email:</label>
-        <input type="email" name="email" class="w-full border rounded p-2" required>
-      </div>
-      <div>
-        <label class="block text-deep-brown">Message:</label>
-        <textarea name="message" rows="4" class="w-full border rounded p-2" required></textarea>
+        <label class="block text-deep-brown" for="message">Message:</label>
+        <textarea id="message" name="message" rows="4" class="w-full border rounded p-2" required></textarea>
       </div>
       <button type="submit" class="bg-coral text-white px-4 py-2 rounded">Send</button>
     </form>
-  </section>
-</main>
 
-<footer class="bg-peach text-center py-6">
-  <p class="text-deep-brown">&copy; 2025 Right to Thrive. All rights reserved.</p>
-</footer>
-  GNU nano 2.0.6              File: index.html                                    
+  </div>
 
-        <label class="block text-deep-brown">Email:</label>
-        <input type="email" name="email" class="w-full border rounded p-2" requir$
-      </div>
-      <div>
-        <label class="block text-deep-brown">Message:</label>
-        <textarea name="message" rows="4" class="w-full border rounded p-2" requi$
-      </div>
-      <button type="submit" class="bg-coral text-white px-4 py-2 rounded">Send</b$
-    </form>
-  </section>
 </main>
 
 <footer class="bg-peach text-center py-6">
   <p class="text-deep-brown">&copy; 2025 Right to Thrive. All rights reserved.</p>
 </footer>
 
+<script>
+  function openTab(evt, tabName) {
+    const tabcontents = document.querySelectorAll(".tabcontent");
+    tabcontents.forEach(tc => (tc.style.display = "none"));
 
+    const tablinks = document.querySelectorAll(".tablink");
+    tablinks.forEach(tl => tl.classList.remove("active"));
 
+    document.getElementById(tabName).style.display = "block";
+    evt.currentTarget.classList.add("active");
+  }
+</script>
 
-
-
+</body>
+</html>
