Update projects list to reflect real work

--- a/index.html
+++ b/index.html
@@ -26,17 +26,16 @@
   <div id="About" class="tabcontent" style="display:block;">
     <h2>About Us</h2>
     <p>
-      Right2Thrive Global is dedicated to supporting underserved communities through education,
-      empowerment, and sustainable development projects.
+      Right to Thrive is dedicated to building a more informed and just society by making legal knowledge understandable, engaging, and available to all.
     </p>
   </div>
 
   <div id="Projects" class="tabcontent" style="display:none;">
     <h2>Our Projects</h2>
     <ul>
-      <li>Community education programs</li>
-      <li>Health and nutrition initiatives</li>
-      <li>Women &amp; youth empowerment workshops</li>
+      <li>Basic Legal Literacy Workshops</li>
+      <li>Pathway to Citizenship</li>
+      <li>Youth Empowerment Workshops</li>
     </ul>
   </div>
 
