Add hero image banner with mission statement

--- a/index.html
+++ b/index.html
@@ -23,11 +23,19 @@
   </div>
 </header>
 
+<div class="hero-banner">
+  <img src="images/hero-banner.jpg" alt="Woman holding sword statue" />
+  <div class="hero-text">
+    <h1>Our Mission</h1>
+    <p>Our mission is to build a more informed and just society by making legal knowledge understandable, engaging, and available to all.</p>
+  </div>
+</div>
+
 <main class="container">
 
   <section id="About" class="tabcontent" style="display:block;">
     <h1>Our Mission</h1>
-    <p>Our mission is to build a more informed and just society by making legal knowledge understandable, engaging, and available to all.</p>
+    <p>Founded in 2025, Right to Thrive is a non-profit organization focused on empowering the community through the law. Through the help of legal professionals, we are able to host many projects within the community to make our society a more fair and just place.</p>
   </section>
 
   <section id="LegalClinics" class="tabcontent" style="display:none;">
