Add logo image and update HTML path

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <header>
   <div class="container header-container">
-    <img src="images/logo.png" alt="Right to Thrive logo" class="logo" />
+    <img src="assets/logo.png" alt="Right to Thrive logo" class="logo" />
     <nav>
       <ul class="nav-links">
 	<li><button class="tablink" onclick="openTab(event, 'SidewalkStories')">Sidewalk Stories</button></li>
